# SimpleMhaReader

./: CMakeLists.txt  README.md
SimpleMhaReader/: CMakeLists.txt  qSlicerSimpleMhaReaderModule.cxx  qSlicerSimpleMhaReaderModule.h  qSlicerSimpleMhaReaderModuleWidget.cxx  qSlicerSimpleMhaReaderModuleWidget.h
SimpleMhaReader/Logic/: CMakeLists.txt  vtkSlicerSimpleMhaReaderLogic.cxx  vtkSlicerSimpleMhaReaderLogic.h
SimpleMhaReader/Resources/: qSlicerSimpleMhaReaderModule.qrc
SimpleMhaReader/Resources/UI/: qSlicerSimpleMhaReaderFooBarWidget.ui  qSlicerSimpleMhaReaderModuleWidget.ui
SimpleMhaReader/Widgets/: qSlicerSimpleMhaReaderFooBarWidget.cxx  qSlicerSimpleMhaReaderFooBarWidget.h
SimpleMhaReader/includes/: util_macros.h
